# graphic-processing-ray-tracing

./: .gitignore  CMakeLists.txt  README.md  output.ppm
core/: Point.cpp  Point.hpp  Vector.cpp  Vector.hpp
lib/: Point.cpp
src/: main.cpp
utils/: RGB.hpp  VectorOperations.cpp  VectorOperations.hpp
